--- a/css/styles.css
+++ b/css/styles.css
@@ -10319,7 +10319,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../assets/img/serious.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../assets/img/about_me_codebw.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
