--- a/css/styles.css
+++ b/css/styles.css
@@ -5630,7 +5630,8 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+
+  background-color: #FFFFFF;
 }
 
 a.bg-light:hover, a.bg-light:focus,
@@ -7397,22 +7398,22 @@ button.bg-black:focus {
 
 .mt-auto,
 .my-auto {
-  margin-top: auto !important;
+  margin-top: auto ;
 }
 
 .mr-auto,
 .mx-auto {
-  margin-right: auto !important;
+  margin-right: auto ;
 }
 
 .mb-auto,
 .my-auto {
-  margin-bottom: auto !important;
+  margin-bottom: auto ;
 }
 
 .ml-auto,
 .mx-auto {
-  margin-left: auto !important;
+  margin-left: auto ;
 }
 
 @media (min-width: 576px) {
@@ -9647,7 +9648,7 @@ body {
   height: auto;
 }
 #projects{
-  background:linear-gradient(to bottom, #000000 0%,rgba(0, 0, 0, 0.8) 100%) rgba(0, 0, 0, 0.9) 75%, ;
+  background:radial-gradient(white, #D3D3D3, #BDBDBD );
 }
 .projects-section {
   padding: 10rem 0;
@@ -9687,9 +9688,10 @@ body {
 }
 .signup-section .form-inline input {
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  padding: 1.25rem 2rem;
+  padding:20px 32px ;
   height: auto;
-  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /*font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
+  font-family: 'Julius Sans One', sans-serif;
   font-size: 80%;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
