--- a/css/styles.css
+++ b/css/styles.css
@@ -9676,8 +9676,17 @@ body {
     border-width: 0.25rem;
     width: 30%;
   }
-}
 
+  
+
+.signup-section h2{
+  background: -webkit-linear-gradient(#7f6194,#9b5c9d );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+  font-size: 40px; 
+  margin-bottom: 100px;
+}
 .signup-section {
   padding: 10rem 0;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../assets/img/about_me_codebw.jpg");
