--- a/css/styles.css
+++ b/css/styles.css
@@ -2439,6 +2439,7 @@ textarea.form-control {
 }
 
 .btn {
+  width: 80%;
   display: inline-block;
   font-weight: 400;
   color: #212529;
@@ -6954,6 +6955,7 @@ button.bg-black:focus {
 
 .h-100 {
   height: 100% !important;
+  
 }
 
 .h-auto {
